--- a/Blink/Makefile
+++ b/Blink/Makefile
@@ -1,5 +1,6 @@
-ARDUINO_PORT ?= /dev/cu.usbserial-A900aede
-ARDUINO_UPLOAD_RATE ?= 57600
+ARDUINO_PORT ?= /dev/cu.usb*
+# ARDUINO_UPLOAD_RATE ?= 57600
+ARDUINO_UPLOAD_RATE ?= 115200
 ARDUINO_AVRDUDE_PROGRAMMER ?= arduino
 ARDUINO_MCU ?= atmega328p
 #ARDUINO_MCU ?= atmega168
